--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,27 +44,26 @@
         android:gravity="center"
         android:layout_alignParentStart="true"
         android:id="@+id/linearLayout2">
-        <ImageView
-            android:layout_width="65dp"
-            android:layout_height="65dp"
+        <Button
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="STOP"
+            android:theme="@style/PrimaryFlatButton"
             android:id="@+id/imageButtonStop"
-
-            android:background="@drawable/oval"
-            android:src="@drawable/stop"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"/>
+        <Button
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="PLAY"
+            android:theme="@style/PrimaryFlatButton"
 
-        <ImageView
-            android:layout_width="65dp"
-            android:layout_height="65dp"
-
-            android:layout_marginLeft="70dp"
             android:id="@+id/imageButtonPlay"
-            android:background="@drawable/oval"
-            android:src="@drawable/playnew"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"/>
     </LinearLayout>
 
     <TextView
