Redesigned the Splash Screen

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -2,20 +2,52 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
+    android:background="#414141"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    >
+    <com.john.waveview.WaveView
+        android:id="@+id/wave_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#252525"
+        app:above_wave_color="#202025"
+        app:blow_wave_color="#202025"
+        app:progress="12"
+        app:wave_height="large"
+        app:wave_hz="fast"
+        app:wave_length="middle"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:src="@drawable/soundc"
+        android:gravity="center"
+        android:id="@+id/imageView5"
+        android:layout_marginBottom="85dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
     <ImageView
         android:scaleType="centerCrop"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:src="@drawable/circle2"
+        android:layout_height="220dp"
+        android:src="@drawable/topbar"
         android:layout_marginBottom="36dp"
-        android:id="@+id/imageView4"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:src="@drawable/soundcom"
-        android:gravity="center" />
+        android:layout_height="95dp"
+        android:src="@drawable/icon"
+        android:gravity="center"
+        android:id="@+id/imageView4"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
